crates/client/tests/snapshots/new_session_screen__error_line.snap
---
source: crates/client/tests/new_session_screen.rs
expression: "render_new_session(NewSessionState\n{\n    model: ModelPicker::Loaded\n    { models: ModelId::ALL.to_vec(), selected: 0, }, field:\n    NewSessionField::Title, error: Some(\"couldn't load models\".to_string()),\n    ..NewSessionState::default()\n})"
---
"┌Title─────────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Model  (←/→)──────────────────────────────────────────────┐"
"│‹ MiniMax M3 ›                                            │"
"└──────────────────────────────────────────────────────────┘"
"┌Mode  (←/→)───────────────────────────────────────────────┐"
"│‹ Build ›                                                 │"
"└──────────────────────────────────────────────────────────┘"
"couldn't load models                                        "
"                                                            "
"                                                            "
"                                                            "
"Tab next field  •  Enter create  •  Esc cancel              "
