crates/client/tests/snapshots/new_session_screen__loaded_model_focused.snap
---
source: crates/client/tests/new_session_screen.rs
expression: "render_new_session(NewSessionState\n{\n    model: ModelPicker::Loaded\n    { models: ModelId::ALL.to_vec(), selected: 0, }, field:\n    NewSessionField::Model, mode: Mode::Build, ..NewSessionState::default()\n})"
---
"┌Title─────────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Model  (←/→)──────────────────────────────────────────────┐"
"│‹ MiniMax M3 ›                                            │"
"└──────────────────────────────────────────────────────────┘"
"┌Mode  (←/→)───────────────────────────────────────────────┐"
"│‹ Build ›                                                 │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"Tab next field  •  Enter create  •  Esc cancel              "
