crates/client/tests/snapshots/new_session_screen__loading_models.snap
---
source: crates/client/tests/new_session_screen.rs
expression: "render_new_session(NewSessionState::default())"
---
"┌Title─────────────────────────────────────────────────────┐"
"│                                                          │"
"└──────────────────────────────────────────────────────────┘"
"┌Model  (←/→)──────────────────────────────────────────────┐"
"│loading…                                                  │"
"└──────────────────────────────────────────────────────────┘"
"┌Mode  (←/→)───────────────────────────────────────────────┐"
"│‹ Build ›                                                 │"
"└──────────────────────────────────────────────────────────┘"
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"Tab next field  •  Enter create  •  Esc cancel              "
